Regression: Error while creat new Geometry node if the language is not English #104850

Closed
opened 2023-02-17 03:36:03 +01:00 by cyk · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 950A/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-15 00:25, hash: c3b53abc109d
Worked: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-14 02:26, hash: 46c34ba1f666

Short description of error

Error while creat new Geometry node if the language is not Englist and the New date is ture
Error info:
Python: Traceback (most recent call last):
  File "D:\chenyingkun\Downloads\blender-3.6.0-alpha+main.c39b81d83288-windows.amd64-release\3.6\scripts\startup\bl_operators\geometry_nodes.py", line 232, in execute
    group = geometry_node_group_empty_new()
  File "D:\chenyingkun\Downloads\blender-3.6.0-alpha+main.c39b81d83288-windows.amd64-release\3.6\scripts\startup\bl_operators\geometry_nodes.py", line 28, in geometry_node_group_empty_new
    group.links.new(group.nodes["Group Input"].outputs[0], group.nodes["Group Output"].inputs[0])
KeyError: 'bpy_prop_collection[key]: key "Group Input" not found'

image
image

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 950A/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-15 00:25, hash: `c3b53abc109d` Worked: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-14 02:26, hash: `46c34ba1f666` **Short description of error** ``` Error while creat new Geometry node if the language is not Englist and the New date is ture Error info: Python: Traceback (most recent call last): File "D:\chenyingkun\Downloads\blender-3.6.0-alpha+main.c39b81d83288-windows.amd64-release\3.6\scripts\startup\bl_operators\geometry_nodes.py", line 232, in execute group = geometry_node_group_empty_new() File "D:\chenyingkun\Downloads\blender-3.6.0-alpha+main.c39b81d83288-windows.amd64-release\3.6\scripts\startup\bl_operators\geometry_nodes.py", line 28, in geometry_node_group_empty_new group.links.new(group.nodes["Group Input"].outputs[0], group.nodes["Group Output"].inputs[0]) KeyError: 'bpy_prop_collection[key]: key "Group Input" not found' ``` ![image](/attachments/8b3e02ed-d889-40d6-875d-21a0d537d5cd) ![image](/attachments/4de199e7-25b0-4838-ae1f-ff4d49858be3) **Exact steps for others to reproduce the error**
cyk added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-17 03:36:04 +01:00

Can not reproduce the issue, can you make video recording I could follow?

Can not reproduce the issue, can you make video recording I could follow?
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-02-17 03:42:24 +01:00
Contributor

Can repro with 3.6.0-alpha+main.c39b81d83288-linux.x86_64 here.

This has the same cause as #104145, and needs the same fix: the code here and here needs to replace group.nodes["Group Input"] with group.nodes[data_("Group Input")] (or equivalent).

Can repro with 3.6.0-alpha+main.c39b81d83288-linux.x86_64 here. This has the same cause as #104145, and needs the same fix: the code [here](https://projects.blender.org/blender/blender/src/commit/ef60b13c1f2966ab0669c0d740e3148c94d4667c/release/scripts/startup/bl_operators/geometry_nodes.py#L28) and [here](https://projects.blender.org/blender/blender/src/commit/ef60b13c1f2966ab0669c0d740e3148c94d4667c/release/scripts/startup/bl_operators/geometry_nodes.py#L124-L125) needs to replace `group.nodes["Group Input"]` with `group.nodes[data_("Group Input")]` (or equivalent).
Author

Download the latest 3.6 alpha.

  1. Edit->Preference->Interace->Translation.
  2. Language set to Non-English.
  3. Check the "New Data".
  4. Switch to Tab of "Geometry Node" and then creat new "Node Group".
  5. Error Message will show.
Download the latest 3.6 alpha. 1. Edit->Preference->Interace->Translation. 2. Language set to Non-English. 3. Check the "New Data". 4. Switch to Tab of "Geometry Node" and then creat new "Node Group". 5. Error Message will show.
Contributor
@HooglyBoogly
Member

Thanks, the problem makes sense, and the fix looks simple.

Thanks, the problem makes sense, and the fix looks simple.
Iliya Katushenock changed title from Error while creat new Geometry node if the language is not Englist to Regression: Error while creat new Geometry node if the language is not Englist 2023-02-17 12:24:07 +01:00
Iliya Katushenock added
Priority
High
and removed
Priority
Normal
labels 2023-02-17 12:24:14 +01:00
Dalai Felinto changed title from Regression: Error while creat new Geometry node if the language is not Englist to Regression: Error while creat new Geometry node if the language is not English 2023-02-17 15:13:04 +01:00
Dalai Felinto self-assigned this 2023-02-17 16:42:07 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-17 18:39:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104850
No description provided.