source/blender/editors/sculpt_paint/sculpt_ops.cc
@@ -229,6 +229,8 @@ static int sculpt_symmetrize_exec(bContext *C, wmOperator *op)
       return OPERATOR_CANCELLED;
   }
 
+  SCULPT_topology_islands_invalidate(ss);
+
   /* Redraw. */
   SCULPT_pbvh_clear(ob);
   WM_event_add_notifier(C, NC_OBJECT | ND_DRAW, ob);
