source/blender/blenkernel/intern/nla_test.cc
@@ -91,4 +91,29 @@ TEST(nla_track, BKE_nlatrack_remove_strip)
   EXPECT_EQ(-1, BLI_findindex(&track.strips, &strip2));
 }
 
+TEST(nla_track, BKE_nlatrack_remove_and_free)
+{
+  AnimData adt{};
+  NlaTrack *track1;
+  NlaTrack *track2;
+
+  // Add NLA tracks to the Animation Data.
+  track1 = BKE_nlatrack_add(&adt, NULL, false);
+  track2 = BKE_nlatrack_add(&adt, track1, false);
+
+  // ensure we have 2 tracks in the track.
+  EXPECT_EQ(2, BLI_listbase_count(&adt.nla_tracks));
+
+  BKE_nlatrack_remove_and_free(&adt.nla_tracks, track2, false);
+  EXPECT_EQ(1, BLI_listbase_count(&adt.nla_tracks));
+
+  // ensure the correct track was removed.
+  EXPECT_EQ(-1, BLI_findindex(&adt.nla_tracks, track2));
+
+  // free the rest of the tracks, and ensure they are removed.
+  BKE_nlatrack_remove_and_free(&adt.nla_tracks, track1, false);
+  EXPECT_EQ(0, BLI_listbase_count(&adt.nla_tracks));
+  EXPECT_EQ(-1, BLI_findindex(&adt.nla_tracks, track1));
+}
+
 }  // namespace blender::bke::tests
